# crewai-yepcode-demo

./: .env.example  README.md  asteroid_impact_report.md  pyproject.toml
src/crewai_yepcode_demo/: crew.py  main.py
src/crewai_yepcode_demo/config/: agents.yaml  tasks.yaml
