[project]
name = "crewai_yepcode_demo"
version = "0.1.0"
description = "crewai-yepcode-demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "yepcode-run>=1.3.0",
]

[project.scripts]
crewai_yepcode_demo = "crewai_yepcode_demo.main:run"
run_crew = "crewai_yepcode_demo.main:run"
train = "crewai_yepcode_demo.main:train"
replay = "crewai_yepcode_demo.main:replay"
test = "crewai_yepcode_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
